--- a/src/components/Header/Header.styles.scss
+++ b/src/components/Header/Header.styles.scss
@@ -6,8 +6,9 @@
   margin-bottom: 25px;
 
   .logo-container {
+    background-image: url(../../assets/swishfox-logo-2.png);
     height: 100%;
-    width: 70px;
+    width: 150px;
     padding: 25px;
   }
 
